rust/transpiler/tests/errors/star_args.hyper
*args: str
---

<div>Content</div>
